# clacky-tray

./: README.md  color-picker.html  index.html  package-lock.json  package.json  preferences.html  vite.config.ts  welcome-design.html
src/: main.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  preferences.rs  sidecar.rs
