[package]
name = "ever-living"
version = "0.1.0"
description = "Ever-Living macOS 菜单栏启动器"
authors = ["weifengchen"]
edition = "2021"

[lib]
name = "ever_living_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
libc = "0.2"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS 不需要额外依赖
